--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
+    "@uploadcare/blocks": "0.30.6",
+    "@uploadcare/upload-client": "^6.12.0",
+    "antd": "^5.12.5",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
