--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:77565155@localhost:5432/pos?schema=public"
+DATABASE_URL="postgres://default:5CMKzbkE4YlW@ep-frosty-meadow-02535797.eu-central-1.postgres.vercel-storage.com:5432/verceldb"
