--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@uploadcare/upload-client": "^6.12.0",
     "antd": "^5.12.5",
     "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "next": "14.0.4",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-pdf-viewer": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
