--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uploadcare/blocks": "0.30.6",
     "@uploadcare/upload-client": "^6.12.0",
     "antd": "^5.12.5",
+    "cors": "^2.8.5",
     "framer-motion": "^10.16.16",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
