--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.7.1",
     "@uploadcare/blocks": "0.30.6",
     "@uploadcare/upload-client": "^6.12.0",
+    "@vercel/speed-insights": "^1.0.2",
     "antd": "^5.12.5",
     "cors": "^2.8.5",
     "framer-motion": "^10.16.16",
